trunk/tests/jastadd/negative/name_errors/L1/2_ConstCircularity2.ob
MODULE TestModule;
	CONST c = (55*2)+5*(c+2);
END TestModule.
